--- a/application/admin/view/map/map.html
+++ b/application/admin/view/map/map.html
@@ -56,7 +56,7 @@
     };
     var styleOptions = {
         //>>边线颜色
-        strokeColor: "white",
+        strokeColor: "red",
         //>>填充颜色。当参数为空时，圆形将没有填充效果。
         fillColor: "green",
         //>>边线的宽度，以像素为单位。
