--- a/application/admin/view/Index/index.html
+++ b/application/admin/view/Index/index.html
@@ -91,6 +91,10 @@
                         href="{:url('Distance/excel')}">导入Excel</a></li>
                 <li class="func" dataType='html' dataLink='msn.htm' iconImg='images/msn.gif'><a
                         href="{:url('Commodity/map')}">街道地图</a></li>
+                <li class="func" dataType='html' dataLink='msn.htm' iconImg='images/msn.gif'><a
+                        href="{:url('Linkage/Linkage')}">三级联动</a></li>
+                <li class="func" dataType='html' dataLink='msn.htm' iconImg='images/msn.gif'><a
+                        href="{:url('Linkage/FourLevel')}">四级联动</a></li>
 
             </ul>
             <!--<h3 class="am-icon-users"><em></em> <a href="#">会员管理</a></h3>-->
