--- a/application/admin/view/Linkage/FourLevel.html
+++ b/application/admin/view/Linkage/FourLevel.html
@@ -29,10 +29,10 @@
 <div class="main">
     <div id="demo3" class="citys">
         <p>
-            <select name="province"></select>
-            <select name="city"></select>
-            <select name="area"></select>
-            <select name="town"></select>
+            <select name="province" style="height: 32px"></select>
+            <select name="city" style="height: 32px"></select>
+            <select name="area" style="height: 32px"></select>
+            <select name="town" style="height: 32px"></select>
         </p>
     </div>
     <script type="text/javascript">
