--- a/application/admin/view/Index/index.html
+++ b/application/admin/view/Index/index.html
@@ -88,7 +88,11 @@
                 <li class="func" dataType='html' dataLink='msn.htm' iconImg='images/msn.gif'><a
                         href="{:url('Distance/street')}">街道信息</a></li>
                 <li class="func" dataType='html' dataLink='msn.htm' iconImg='images/msn.gif'><a
+                        href="{:url('Distance/conduit')}">井管信息</a></li>
+                <li class="func" dataType='html' dataLink='msn.htm' iconImg='images/msn.gif'><a
                         href="{:url('Distance/excel')}">导入Excel</a></li>
+                <li class="func" dataType='html' dataLink='msn.htm' iconImg='images/msn.gif'><a
+                        href="{:url('distance/exportExcel')}">导出Excel</a></li>
                 <li class="func" dataType='html' dataLink='msn.htm' iconImg='images/msn.gif'><a
                         href="{:url('Commodity/map')}">街道地图</a></li>
                 <li class="func" dataType='html' dataLink='msn.htm' iconImg='images/msn.gif'><a
