--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -1,29 +1,45 @@
 <html>
 <head>
     <title>首页</title>
-    <link rel="stylesheet" href="{$root}css/css.css" />
+    <link rel="stylesheet" href="{$root}css/css.css"/>
     <meta charset="utf-8" name="" content=""/>
+    <script src="{$root}jquery-1.11.1.min.js" type="text/javascript" charset="utf-8"></script>
 </head>
 <body>
+	<!--<script type="text/javascript">
+		$('#cs').click(function(){
+			var zz = 'wsxj001285';
+			$.ajax({
+			data:{data:zz},
+			type:"post",
+			url:"{:url('index/index/index_ajax')}",
+			success:function(msg){
+				console.log(msg)
+			},
+			
+		   });
+		})
+		
+	</script>-->
 	<div class="a">功能展示</div>
 	<div class="a1">用实践见证我们的实力</div>
     <div class="a2">
     	<div class="a3">
-    		<div class="a6"><img src="1.jpg" alt="" /></div>
+    		<div class="a6"><img src="" alt="" /></div>
     		<div class="a7">
     			<div class="a12"><span>点一下，玩一年</span></div>
     		    <div class="a13"><span>装备不花一分钱</span></div>
     		</div>
     	</div>
     	<div class="a4">
-    		<div class="a8"><img src="1.jpg" alt="" /></div>
+    		<div class="a8"><img src="" alt="" /></div>
     		<div class="a9">
     			<div class="a14"><span>点一下，玩一年</span></div>
     		    <div class="a15"><span>装备不花一分钱</span></div>
     		</div>
     	</div>
     	<div class="a5">
-    		<div class="a10"><img src="1.jpg" alt="" /></div>
+    		<div class="a10"><img src="" alt="" /></div>
     		<div class="a11">
     			<div class="a16"><span>点一下，玩一年</span></div>
     		    <div class="a17"><span>装备不花一分钱</span></div>
